--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  name: "solarized",
-  version: "0.1.0",
-  main: "css/solarized.css",
-  ignore: ".sass-cache"
+  "name": "solarized",
+  "version": "0.1.1",
+  "main": "css/solarized.css",
+  "ignore": [".sass-cache"]
 }
